--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Webaruhaz">
+    <meta name="keywords" content="Webaruhaz">
+    <meta name="author" content="Baksa Bence, Halász Gergő, Kovács Gábor">
+    <title>Webáruház</title>
 </head>
 <body>
-    
+    <main>
+        <header>
+
+        </header>
+        <nav>
+
+        </nav>
+        <aside>
+
+        </aside>
+        <article>
+
+        </article>
+        <aside>
+
+        </aside>
+        <footer>
+            
+        </footer>
+    </main>
 </body>
 </html>
