--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="Webaruhaz">
     <meta name="keywords" content="Webaruhaz">
     <meta name="author" content="Baksa Bence, Halász Gergő, Kovács Gábor">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <title>Webáruház</title>
 </head>
 <body>
@@ -14,19 +16,53 @@
             <h1>Webáruház</h1>
         </header>
         <nav>
-
+                <ul class="nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html">Kezdőlap</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Galéria</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="merettablazat.html">Mérettáblázat</a>
+                  </li>
+                </ul>
+              </div>
         </nav>
         <aside>
-
+            <h2>Keresési feltételek</h2>
+            <div class="mb-3 mt-3">
+                <label for="termeknev" class="form-label">A termék neve:</label>
+                <input type="text" class="form-control" id="termeknev" placeholder="A termék neve" name="termeknev">
+              </div>
+              <label for="customRange" class="form-label">Szűrés ár szerint:</label>
+              <br>
+              <input type="range" class="default-range" id="customRange">
         </aside>
         <article>
-            
+            <div class="card" style="width:400px">
+                <img class="card-img-top" src="../bootstrap4/img_avatar1.png" alt="Card image" style="width:100%">
+                <div class="card-body">
+                  <h4 class="card-title"></h4>
+                  <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+                  <a href="#" class="btn btn-primary">See Profile</a>
+                </div>
+              </div>
         </article>
         <aside>
-
+            <h2>Kapcsolódó cikkek</h2>
+            <ul class="list-group">
+                <li class="list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum veniam minus deserunt autem veritatis! Esse, temporibus fuga quibusdam provident ea dignissimos impedit voluptas hic tempora earum inventore porro ducimus illo.</li>
+                <li class="list-group-item">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo ad sequi nam magnam voluptatibus inventore pariatur deleniti labore similique</li>
+                <li class="list-group-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+              </ul>
+            <h2>Kapcsolódó cikkek</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati ea porro, consequatur omnis debitis quam neque nulla unde dolorem asperiores error autem tempore, mollitia fuga deleniti voluptate placeat perspiciatis delectus.
+            Numquam laborum optio nulla, autem in consequuntur dolores non odio natus velit a, minus deserunt ipsam sequi sunt fugit? Nesciunt ad odit fuga iusto optio perspiciatis ratione nisi dignissimos reprehenderit.
+            Nam, omnis corrupti aliquam exercitationem asperiores optio odio veritatis velit unde accusantium, autem tempora hic maxime, esse iste et laudantium sit deleniti sequi labore eaque nulla impedit cum fugit! Possimus.</p>
         </aside>
         <footer>
-
+            <p>Baksa Bence, Halász Gergő, Kovács Gábor</p>
         </footer>
     </main>
 </body>
