urlap, kezdooldal kesz

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="merettablazat.html">Mérettáblázat</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="profil.html">Profil</a>
+                    </li>
                     </ul>
                 </div>
             </nav>
@@ -43,45 +46,68 @@
             </aside>
             <article class="col-md-6">
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="card">
-                            <h4 class="card-title">Retro Gamer férfi poló</h4>
-                            <img class="card-img-top" src="kepek/polo1.jpg" alt="polo">
-                            <p class="card-text">A pólódat kifordítva 30 fokon, szárítógép használata nélkül mosd ki, így vigyázva a 100% pamut szövet és a nyomat minőségére.</p>
-                            <a href="#" class="btn btn-primary">Kosárba</a>
-                        </div>
+                    <div class="col-lg-4 mb-3 card">
+                        
+                            <div class="card-header">
+                                <h4 class="card-title">Retro Gamer férfi poló</h4>
+                            </div>
+                            <div class="card-body">
+                                <img class="card-img-top" src="kepek/polo1.jpg" alt="polo">
+                                <p class="card-text">A pólódat kifordítva 30 fokon, szárítógép használata nélkül mosd ki, így vigyázva a 100% pamut szövet és a nyomat minőségére.</p>
+                            </div>
+                            <div class="card-footer">
+                                <p>Ár: 15000ft <a href="#" class="btn btn-primary" style="float: right;">Kosárba</a></p>
+                                
+                            </div>
+
                     </div>
-                    <div class="col-md-4">
-                        <div class="card">
-                            <h4 class="card-title">Túléltem még egy meetinget</h4>
-                            <img class="card-img-top" src="kepek/polo2.jpg" alt="polo">
-                            <p class="card-text">Legnépszerűbb prémium pólónk, ami garantáltan a kedvenced lesz!</p>
-                            <a href="#" class="btn btn-primary">Kosárba</a>
-                        </div>
+                    <div class="col-lg-4 mb-3 card">
+                            <div class="card-header">
+                                <h4 class="card-title">Túléltem még egy meetinget</h4>
+                            </div>
+                            <div class="card-body">
+                                <img class="card-img-top" src="kepek/polo2.jpg" alt="polo">
+                                <p class="card-text">Legnépszerűbb prémium pólónk, ami garantáltan a kedvenced lesz!</p>
+                            </div>
+                            <div class="card-footer">
+                                <p>Ár: 15000ft <a href="#" class="btn btn-primary" style="float: right;">Kosárba</a></p>
+                            </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="card">
+                    <div class="col-lg-4 mb-3 card">
+                        <div class="card-header">
                             <h4 class="card-title">Az éveim múlásával</h4>
+                        </div>
+                        <div class="card-body">
                             <img class="card-img-top" src="kepek/polo3.jpg" alt="polo">
                             <p class="card-text">Simogatni-valóan puha anyag, rövid ujj és testhez állóbb fazon a stílusos és kényelmes megjelenésért. Ha szereted a laza viseletet, rendelj egy mérettel nagyobbat!</p>
-                            <a href="#" class="btn btn-primary">Kosárba</a>
+                        </div>
+                        <div class="card-footer">
+                            <p>Ár: 15000ft <a href="#" class="btn btn-primary" style="float: right;">Kosárba</a></p>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="card">
+                    <div class="col-lg-4 mb-3 card">
+                        <div class="card-header">
                             <h4 class="card-title">I hate...</h4>
+                        </div>
+                        <div class="card-body">
                             <img class="card-img-top" src="kepek/polo4.jpg" alt="polo">
-                            <p class="card-text">Vicces póló , vicces ajándék, szülinapi ajándék!</p>
-                            <a href="#" class="btn btn-primary">Kosárba</a>
+                                <p class="card-text">Vicces póló , vicces ajándék, szülinapi ajándék!</p>
+                        </div>
+                        <div class="card-footer">
+                            <p>Ár: 15000ft <a href="#" class="btn btn-primary" style="float: right;">Kosárba</a></p>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="card">
-                            <h4 class="card-title">Képzeld el az életet</h4>
-                            <img class="card-img-top" src="kepek/polo5.jpg" alt="polo">
-                            <p class="card-text">Divatos póló, akár hétköznapi viseletként is megállja a helyét , nagyon jó minőségű anyaga miatt. Az általunk gyártott pólóknál nem kell attól tartanod, hogy kinyúlik az anyag, kifakul, vagy berepedezik a minta. Anyaga 100% Pamut Mérettáblázatot a képek között találsz. 25 féle szín közül választhatsz!</p>
-                            <a href="#" class="btn btn-primary">Kosárba</a>
-                        </div>
+                    <div class="col-lg-4 mb-3 card">
+                            <div class="card-header">
+                                <h4 class="card-title">Képzeld el az életet</h4>
+                            </div>
+                            <div class="card-body">
+                                <img class="card-img-top" src="kepek/polo5.jpg" alt="polo">
+                                <p class="card-text">Divatos póló, akár hétköznapi viseletként is megállja a helyét , nagyon jó minőségű anyaga miatt. Az általunk gyártott pólóknál nem kell attól tartanod, hogy kinyúlik az anyag, kifakul, vagy berepedezik a minta. Anyaga 100% Pamut Mérettáblázatot a képek között találsz. 25 féle szín közül választhatsz!</p>
+                            </div>
+                            <div class="card-footer">
+                                <p>Ár: 15000ft <a href="#" class="btn btn-primary" style="float: right;">Kosárba</a></p>
+                            </div>
                     </div>
             </div>
             </article>
@@ -98,7 +124,7 @@
                 Nam, omnis corrupti aliquam exercitationem asperiores optio odio veritatis velit unde accusantium, autem tempora hic maxime, esse iste et laudantium sit deleniti sequi labore eaque nulla impedit cum fugit! Possimus.</p>
             </aside>
             </div>
-            <footer class="col-md-12">
+            <footer class="col-md-12" style="text-align: center;">
                 <p>Baksa Bence, Halász Gergő, Kovács Gábor</p>
             </footer>
         </div>
