admin page done

--- a/admin.html
+++ b/admin.html
@@ -32,13 +32,14 @@
 
         <article>
             <div class="container mt-3">          
-                <table class="table">
+                <table class="table table-bordered table-secondary" style="text-align: center;">
                   <thead>
                     <tr>
                       <th>ID</th>
                       <th>Név</th>
+                      <th style="width: 200px;">Kép</th>
                       <th>Méret</th>
-                      <th>Ár</th>
+                      <th style="width: 150px;">Ár</th>
                       <th>Leírás</th>
                       <th>Készlet db</th>
                     </tr>
@@ -47,48 +48,57 @@
                     <tr>
                       <td>RETRO</td>
                       <td>Retro Gamer férfi póló</td>
-                      <td>john@example.com</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
+                      <td><img src="kepek/polo1.jpg" alt="Retro Gamer férfi póló" style="width: 50%;"></td>
+                      <td>L</td>
+                      <td>8000 FT</td>
+                      <td>A pólódat kifordítva 30 fokon, szárítógép használata nélkül mosd ki, így vigyázva a 100% pamut szövet és a nyomat minőségére.Ez azért fontos, mert a magas hőfokú, száraz környezetben a centrifugális erő mellett megsérülne a minta.</td>
+                      <td>15.521</td>
                     </tr>
                     <tr>
                       <td>TULELTEM</td>
                       <td>Túléltem még egy meetinget</td>
-                      <td>mary@example.com</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
+                      <td><img src="kepek/polo2.jpg" alt="Túléltem még egy meetinget" style="width: 50%;"></td>
+                      <td>S</td>
+                      <td>12.000 FT</td>
+                      <td>Legnépszerűbb prémium pólónk, ami garantáltan a kedvenced lesz! Simogatni-valóan puha anyag, rövid ujj és testhez állóbb fazon a stílusos és kényelmes megjelenésért. Ha szereted a laza viseletet, rendelj egy mérettel nagyobbat!</td>
+                      <td>6.241</td>
                     </tr>
                     <tr>
                       <td>EVEIM</td>
                       <td>Az éveim múlásával</td>
-                      <td>july@example.com</td>
-                      <td></td>
-                      <td></td>
-                      <td></td>
+                      <td><img src="kepek/polo3.jpg" alt="Az éveim múlásával" style="width: 50%;"></td>
+                      <td>M</td>
+                      <td>15.000 FT</td>
+                      <td>Vicces póló , vicces ajándék, szülinapi ajándék! 100% gyűrűs fonású fésült pamutból készül, válltól vállig megerősített és beszegett nyakkivágással. Emellett a dupla tűzésű karkivágás és derékrész biztosítja a kiváló minőséget és formatartást.</td>
+                      <td>14</td>
                     </tr>
                     <tr>
                         <td>IHATE</td>
                         <td>I hate morning people</td>
-                        <td>july@example.com</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="kepek/polo4.jpg" alt="I hate morning people" style="width: 50%;"></td>
+                        <td>M</td>
+                        <td>10.000 FT</td>
+                        <td>Divatos póló, akár hétköznapi viseletként is megállja a helyét , nagyon jó minőségű anyaga miatt. Az általunk gyártott pólóknál nem kell attól tartanod, hogy kinyúlik az anyag, kifakul, vagy berepedezik a minta. Anyaga 100% Pamut Mérettáblázatot a képek között találsz. 25 féle szín közül választhatsz!</td>
+                        <td>8.733</td>
                       </tr>
                       <tr>
                         <td>KEZPELD</td>
                         <td>Képzeld el az életet tetoválások nélkül</td>
-                        <td>july@example.com</td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td><img src="kepek/polo5.jpg" alt="Képzeld el az életet tetoválások nélkül" style="width: 50%;"></td>
+                        <td>XL</td>
+                        <td>11.000 FT</td>
+                        <td>Népszerű pólómárka, ami már nálunk is elérhető ...
+
+                          A hosszított fazon és a vékony, 146 g/m2 anyagvastagság garantálja a kényelmes viseletet. 100% gyűrűs fonású fésült pamutból készül, válltól vállig megerősített és beszegett nyakkivágással. Emellett a dupla tűzésű karkivágás és derékrész biztosítja a kiváló minőséget és formatartást.</td>
+                        <td>2.154</td>
                       </tr>
                   </tbody>
                 </table>
+              </div>
+              
         </article>
 
-        <footer>
+        <footer style="text-align: center;">
             <p>Baksa Bence, Halász Gergő, Kovács Gábor</p>
         </footer>
     </main>
