--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="velemeny.html">Vélemény</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="profil.html">Profil</a>
+                    </li>
                     </ul>
                 </div>
             </nav>
