--- a/admin.html
+++ b/admin.html
@@ -29,6 +29,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="velemeny.html">Vélemény</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="profil.html">Profil</a>
+              </li>
                 </ul>
               </div>
         </nav>
@@ -102,7 +105,7 @@
         </article>
 
         <footer style="text-align: center;">
-            <p>Baksa Bence, Halász Gergő, Kovács Gábor</p>
+            <p>Baksa Bence, Halász Gergő, Kovács Gábor, Kocsi Dorka</p>
         </footer>
     </main>
 </body>
