--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </aside>
             </div>
             <footer class="col-md-12" style="text-align: center;">
-                <p>Baksa Bence, Halász Gergő, Kovács Gábor</p>
+                <p>Baksa Bence, Halász Gergő, Kovács Gábor, Kocsi Dorka</p>
             </footer>
         </div>
     </main>
