--- a/merettablazat.html
+++ b/merettablazat.html
@@ -30,6 +30,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="velemeny.html">Vélemény</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="profil.html">Profil</a>
+                </li>
                 </ul>
               </div>
         </nav>
@@ -114,7 +117,7 @@
         </aside>
         </div>
         <footer class="col-md-12">
-            <p>Baksa Bence, Halász Gergő, Kovács Gábor</p>
+            <p>Baksa Bence, Halász Gergő, Kovács Gábor, Kocsi Dorka</p>
         </footer>
     </div>
     </main>
