--- a/profil.html
+++ b/profil.html
@@ -28,8 +28,11 @@
                         <a class="nav-link" href="merettablazat.html">Mérettáblázat</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="merettablazat.html">Profil</a>
-                    </li>
+                      <a class="nav-link" href="velemeny.html">Vélemény</a>
+                  </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="profil.html">Profil</a>
+                  </li>
                     </ul>
                 </div>
             </nav>
@@ -107,7 +110,7 @@
             </aside>
             </div>
             <footer class="col-md-12" style="text-align: center;">
-                <p>Baksa Bence, Halász Gergő, Kovács Gábor</p>
+                <p>Baksa Bence, Halász Gergő, Kovács Gábor, Kocsi Dorka</p>
             </footer>
         </div>
     </main>
