--- a/velemeny.html
+++ b/velemeny.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="profil.html">Profil</a>
                     </li>
                 </ul>
-        </div>
+        
         </nav>
         <form action="#" method="get">
             <fieldset>
@@ -66,13 +66,15 @@
                     <input type="range" id="ertekeles" name="ertekel_szam" oninput="this.form.e_sz.value=this.value">
                 </div>
                 <div class="form-check">
-                <laber for="email">E-mail</laber>
+                <label for="email">E-mail</label>
                 <input type="text" size="40"><br>
             </div>
+        </div>
             <div class="form-check">
                 <input type="submit" value="Küldés">
             </div>
-    </fieldset>
+            </fieldset>
+        </form>
 
 
                 <div class="row">
@@ -106,6 +108,7 @@
                     <p>Baksa Bence, Halász Gergő, Kovács Gábor, Kocsi Dorka</p>
                 </footer>
                 </div>
+            
     </main>
 </body>
 
