--- a/profil.html
+++ b/profil.html
@@ -34,7 +34,6 @@
                       <a class="nav-link" href="profil.html">Profil</a>
                   </li>
                     </ul>
-                </div>
             </nav>
             <div class="row">
             <aside class="col-md-3">
@@ -80,7 +79,7 @@
                             <label class="form-check-label" for="radio1"></label>
                           </div>
                           <div class="form-check">
-                            <input type="radio" class="form-check-input" id="radio1" name="optradio" value="option1" checked>Nő
+                            <input type="radio" class="form-check-input" id="radio2" name="optradio" value="option1" checked>Nő
                             <label class="form-check-label" for="radio1"></label>
                           </div>
                       </div>
@@ -88,7 +87,7 @@
                         <h2 style="padding-top: 15px;">Korod:</h2>
                         <div class="col">
                             <div style="text-align:center; padding-bottom: 5px;">
-                                <input type="number" name="kor" size="25" oninput="this.form.korszam.value=this.value" min="15" max="99">
+                                <input type="number" name="kor" oninput="this.form.korszam.value=this.value" min="15" max="99">
                             </div>
                             <input type="range" name="korszam" class="form-range" min="15" max="99" oninput="this.form.kor.value=this.value">
 
@@ -108,11 +107,12 @@
                 Numquam laborum optio nulla, autem in consequuntur dolores non odio natus velit a, minus deserunt ipsam sequi sunt fugit? Nesciunt ad odit fuga iusto optio perspiciatis ratione nisi dignissimos reprehenderit.
                 Nam, omnis corrupti aliquam exercitationem asperiores optio odio veritatis velit unde accusantium, autem tempora hic maxime, esse iste et laudantium sit deleniti sequi labore eaque nulla impedit cum fugit! Possimus.</p>
             </aside>
-            </div>
+            
             <footer class="col-md-12" style="text-align: center;">
                 <p>Baksa Bence, Halász Gergő, Kovács Gábor, Kocsi Dorka</p>
             </footer>
-        </div>
-    </main>
+          </div>
+          </div>
+      </main>
 </body>
 </html>
