--- a/admin.html
+++ b/admin.html
@@ -32,6 +32,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="profil.html">Profil</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="admin.html">Admin</a>
+            </li>
                 </ul>
         </nav>
 
