--- a/velemeny.html
+++ b/velemeny.html
@@ -37,39 +37,45 @@
         </nav>
         <form action="#" method="get">
             <fieldset>
-                <legend>Visszajelzés típusa</legend>
+                <div style="margin-left: 20px;">
+                    <legend>Visszajelzés típusa</legend>
+                </div>
+                    <div class="form-check">
+                        <input type="radio" id="radio1" name="tipusok" value="megjegyzes">
+                        <label for="radio1">Megjegyzés</label>
+                        <input type="radio" id="radio2" name="tipusok" value="javaslat">
+                        <label for="radio2">Javaslat</label>
+                        <input type="radio" id="radio3" name="tipusok" value="kerdes">
+                        <label for="radio3">Kérdés</label>
+                    </div>
+                    <div class="form-check">
+                        <label for="valasz">Írja le visszajelzését:</label><br>
+                        <textarea id="valasz" name="visszajelzes" rows="4" cols="60"></textarea>
+                    </div>
+                
                 <div class="form-check">
-                    <input type="radio"  id="radio1" name="tipusok">
-                    <label for="radio1">Megjegyzés</label>
-                    <input type="radio"  id="radio2" name="tipusok">
-                    <label for="radio2">Javaslat</label>
-                    <input type="radio" id="radio3" name="tipusok">
-                    <label for="radio3">Kérdés</label>
+                    <label for="ajanlas">Ajánlanád-e másnak az oldalt?</label>
+                    <div class="valasztas">
+                        <input type="radio" id="radio4" name="ajanlas" value="igen">
+                        <label for="radio4">Igen</label>
+                        <input type="radio" id="radio5" name="ajanlas" value="nem">
+                        <label for="radio5">Nem</label>
+                    </div>
                 </div>
                 <div class="form-check">
-                <label for="valasz">Írja le visszajelzését:</label>
-                <input type="text" size="60"><br>
-            </div>
-            <div class="form-check">
-                <label for="ajanlas">Ajánlanád-e másnak az oldalt?</label>
-                <div class="valasztas">
-                    <input type="radio" id="radio4" name="valasztek">
-                <label for="radio4">Igen</label>
-                <input type="radio" id="radio5" name="valasztek">
-                <label for="radio4">Nem</label>
+                    <label for="ertekeles">Mennyire tetszett az oldal? </label>
+                    <input type="range" id="ertekeles" name="ertekeles" min="0" max="10" oninput="this.form.e_sz.value=this.value">
+                    <output id="e_sz">0</output>
                 </div>
                 <div class="form-check">
-                    <label for="ertekeles_szam">Mennyire tetszett az oldal? </label>
-                    <input type="range" id="ertekeles" name="ertekel_szam" oninput="this.form.e_sz.value=this.value">
+                    <label for="email">E-mail cím</label>
+                    <input type="email" id="email" name="email" size="40"><br>
                 </div>
                 <div class="form-check">
-                <laber for="email">E-mail</laber>
-                <input type="text" size="40"><br>
-            </div>
-            <div class="form-check">
-                <input type="submit" value="Küldés">
-            </div>
-    </fieldset>
+                    <input type="submit" value="Küldés">
+                </div>
+            </fieldset>
+        </form>
 
 
                 <div class="row">
